Infrastructure/k8s/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: raiseyourvoice-backend
spec:
  selector:
    app: raiseyourvoice-backend
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
  - name: https
    port: 443
    targetPort: 443
    protocol: TCP
  - name: grpc
    port: 81
    targetPort: 80
    protocol: TCP
  type: ClusterIP
